<resources>
    <string name="app_name">一体化</string>

    <string name="loadDatas">加载中，请稍后...</string>

    <string name="internet_not_connect">网络访问失败，请连接网络</string>

    <string name="title">一体化</string>
    <string name="right_title">编辑</string>

    <string name="cadre_assess_manager">干部一体化考核管理</string>
    <string name="depart_assess_manager">部门一体化考核管理</string>
    <string name="assess_set">一体化考核设置</string>

    <string name="self_evaluate">自我写实与考评</string>
    <string name="self_assess">我的月度考核表</string>
    <string name="self_early_warning">预警加减分汇总</string>
    <string name="cadre_assess_approve">干部考核表审批</string>
    <string name="integrated_search">量化查询汇总表</string>
    <string name="cadre_assess_gather_search">考核等级汇总表</string>
    <string name="cadre_score_search">考核分数汇总表</string>
    <string name="cadre_risk_search">安全风险控制表</string>

    <string name="assess_month">考核月份：</string>
    <string name="refer_apply">提交审核</string>
    <string name="check">查看</string>
    <string name="check_detail">查看详细</string>
    <string name="enter_detailWork">录入具体工作</string>

    <string name="work_task">工作任务：</string>
    <string name="normalcy_task">常态任务：</string>
    <string name="dynamic_task">动态任务：</string>
    <string name="total">合　　计：</string>
    <string name="status">状　　态：</string>
    
    <string name="myAssess_create_time">创建时间：</string>
    <string name="myAssess_enter_time">录入时间：</string>
    <string name="myAssess_address">地　　点：</string>
    <string name="myAssess_workDetail">具体工作：</string>

    <string name="word_standard">工作标准：</string>
    <string name="realistic_person">写 实 人：</string>
    <string name="depart">部　　门</string>
    <string name="find_address_type">发现地点类别</string>
    <string name="find_address">发现地点</string>
    <string name="risk_type">风险项点类别</string>
    <string name="risk">风险项点</string>
    <string name="examine_time">检查时间</string>
    <string name="depart_examine">本部门检查</string>
    <string name="routine_tasks">常态任务</string>
    <string name="dynamic_tasks">动态任务</string>
    <string name="totals">合　　计</string>
    <string name="examine_content">检查内容</string>
    <string name="submit">提　　交</string>

    <string name="ReuseInfo">复用考核信息</string>
    <string name="VolumeSetTasks">批量设置任务</string>
    <string name="DynamicSetTask">增加动态任务</string>
    <string name="SecurityRisksForm">安全风险控制表</string>
    <string name="CadrePreCheckForm">月度预考核表</string>
    <string name="setCadreSelfWork">本职工作设置</string>
    <string name="ExamineNumberGrade">考核分数与等级</string>
    <string name="CadreStartLine">干部起评分数设置</string>
    <string name="setExamineForm">考核评定表设置</string>
    <string name="PlusReduce">考核性质加减分</string>
    <string name="xianchangAddReduce">现场检查加减分</string>
    <string name="setVetoConditionForm">否决条件设置表</string>

    <string name="work_tasks">工作任务</string>
    <string name="number">次数</string>

    <item type="id" name="tag_security_year"/>
    <item type="id" name="tag_security_id"/>
    <item type="id" name="tag_security_pid"/>
    <item type="id" name="tag_security_code"/>
    <item type="id" name="tag_security_level"/>
    <item type="id" name="tag_security_name"/>
    <item type="id" name="tag_security_status"/>

    <item type="id" name="tag_cadre_post_name"/>
    <item type="id" name="tag_cadre_position_name"/>
    <item type="id" name="tag_cadre_name"/>
    <item type="id" name="tag_cadre_id"/>

    <string name="personal_name">姓　　名：</string>
    <string name="department">部　　门：</string>
    <string name="job_name">职　　名：</string>
    <string name="quarters">岗　　位：</string>
    <string name="date">日　　期：</string>

    <string name="self_appraise">自我评价</string>
    <string name="self_appraise_num">自 评 分：</string>
    <string name="personal_edit">编辑</string>

    <string name="template_month">模板月份：</string>
    <string name="template_content">模板写实内容</string>
    <string name="realistic_month">写实月份：</string>
    <string name="own_work_content">本职工作内容</string>
    <string name="own_work_standard">本职工作标准：</string>
    <string name="realistic_content">本月写实内容</string>
    <string name="assessment_num">考评分：</string>
    <string name="copy">复制</string>
    <string name="restore">还原</string>
    <string name="save">保存</string>

    <string name="cadre_name">姓　　名：</string>
    <string name="no_approve">待审批</string>
    <string name="already_approval">已审批</string>
    <string name="all_approval">全部</string>

    <string name="cadre_depart">部　　门：</string>
    <string name="cadre_jobName">职　　名：</string>
    <string name="cadre_post">岗　　位：</string>
    <string name="cadre_leader_approval">直属领导审批：</string>
    <string name="cadre_assessment_approval">考评组审批：</string>
    <string name="edit">修改</string>

    <string name="project">项目</string>
    <string name="assessContent">考核内容</string>
    <string name="assessStandard">考核标准</string>
    <string name="vetoConditions">否决条件</string>
    <string name="ownWork">本职工作</string>
    <string name="fieldControl">现场控制</string>

    <string name="minus_add_reason">加减分原因</string>
    <string name="systemStatistics">系统统计</string>
    <string name="superiorLeadership">上一级领导</string>
    <string name="loweHominids">劳人科</string>
    <string name="selfRealism">自我写实减分</string>

    <string name="approvePersonal_opinion">考核人意见</string>
    <string name="approvePersonal">考核人：</string>
    <string name="approvePersonal_date">日期：</string>

    <string name="examiningSituation">考核情况</string>
    <string name="add_minus_num">加减分数</string>
    <string name="actualScore">实际得分</string>
    <string name="assessGroup_opinion">考核组意见（劳人）</string>
    <string name="assessType">考核类别</string>

    <string name="leader_sign">领导签批</string>

    <string name="score">分　　数</string>
    <string name="minus_add_reason1">加减分原因</string>
    <string name="veto_conditions">否决条件</string>
    <string name="approve">提交</string>

    <string name="thisMonthProblem">本月存在的问题</string>
    <string name="specificJob">具体工作</string>
    <string name="time">时间</string>
    <string name="address">地点</string>
    <string name="workTask">工作任务</string>
    <string name="isFinish">是否完成</string>
    <string name="num">序号</string>
    <string name="performance">完成情况</string>

    <string name="quantization_time">时　　间：</string>
    <string name="quantization_address">地　　点：</string>

    <string name="happen_time">发生时间</string>
    <string name="incident">事　　件</string>
    <string name="minus_add">加减分：</string>

    <string name="checking_score">考勤分数：</string>
    <string name="system_grate">系统计算等级：</string>
    <string name="assess_grate">考核等级：</string>
    <string name="reject">驳回</string>

    <string name="riskType">风险类别</string>
    <string name="postManager">管理岗位</string>
    <string name="workStandard">工作标准</string>
    <string name="risk_controller">风险管控责任分解</string>
    <string name="type">类　　型：</string>

    <string name="find_problem">发现问题加分(分数/件数)</string>
    <string name="beFind_problem">被发现减分(分数/件数)</string>
    <string name="general_noDuty">一般失职失责：</string>
    <string name="serious_noDuty">严重失职失责：</string>
    <string name="getOut_work">调离工作岗位（含“红线”问题）：</string>
    <string name="moreSerious_assess">较严重联挂考核：</string>
    <string name="inLaidOff">内部下岗：</string>
    <string name="criticism_education">批评教育：</string>
    <string name="general_assess">一般联挂考核：</string>
    <string name="serious_assess">严重联挂考核：</string>
    <string name="totalAdd">合计加分：</string>
    <string name="totalMinus">合计减分：</string>
    <string name="startGrade">起评分：</string>
    <string name="quantitative_tasks">量化任务：</string>
    <string name="find_riskProblem">发现安全隐患：</string>
    <string name="self_realism">自我写实：</string>
    <string name="materialTime">关键时间：</string>
    <string name="Security_Commission_work">安委会重点工作：</string>
    <string name="leader">上级领导：</string>
    <string name="lowe_hominids">劳人科：</string>
    <string name="total_add_minus">合计加减分：</string>
    <string name="assess_score">考核分数：</string>
    <string name="assess_class">考核等级：</string>
    <string name="cadrecheck">干部考核设置</string>
    <string name="departcheck">部门考核设置</string>
    <string name="checkduration">考核周期设置</string>
    <string name="set_success">设置成功</string>
    <string name="switch_item">选择表格</string>

</resources>
