<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:text="@string/personal_name"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

        <TextView
            android:id="@+id/tv_warning_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadre_name"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/fourteen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:text="@string/happen_time"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

        <TextView
            android:id="@+id/tv_warning_happenTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadre_name"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/fourteen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:text="@string/minus_add"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

        <TextView
            android:id="@+id/tv_warning_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadre_name"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/fourteen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:text="@string/incident"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

        <TextView
            android:id="@+id/tv_warning_incident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="7dp"
            android:text="@string/cadre_name"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/fourteen" />

    </LinearLayout>

</LinearLayout>