<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_name"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

        <TextView
            android:id="@+id/tv_collect_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_name"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

        <TextView
            android:id="@+id/tv_collect_jobName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quarters"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

        <TextView
            android:id="@+id/tv_collect_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

        <TextView
            android:id="@+id/tv_collect_depart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="26dp"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checking_score"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

        <TextView
            android:id="@+id/tv_collect_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="26dp"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_grate"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

        <TextView
            android:id="@+id/tv_collect_systemGrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="26dp"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assess_grate"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

        <TextView
            android:id="@+id/tv_collect_grate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="26dp"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_gray"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal"
        android:gravity="right|center_vertical">

        <TextView
            android:id="@+id/tv_collect_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/blue_button"
            android:text="@string/check"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/fourteen"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_collect_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/yellow_button"
            android:text="@string/reject"
            android:textSize="@dimen/fourteen"
            android:textColor="@color/white"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>