<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@mipmap/bg_alert"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_refer_apply"
            android:layout_width="105dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/ReuseInfo"
            android:textColor="@color/white"
            android:textSize="@dimen/sixteen" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_gray"></View>

        <TextView
            android:id="@+id/tv_check"
            android:layout_width="105dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/VolumeSetTasks"
            android:textColor="@color/white"
            android:textSize="@dimen/sixteen" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_gray"></View>

        <TextView
            android:id="@+id/tv_check_detail"
            android:layout_width="105dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/DynamicSetTask"
            android:textColor="@color/white"
            android:textSize="@dimen/sixteen" />

    </LinearLayout>


</LinearLayout>